open.sh settings
Adding an Example implementation for open.sh settings

--- a/config
+++ b/config
@@ -1,3 +1,7 @@
+#
+# created by: Lae-Alfheim
+#
+
 browser "$HOME/.config/newsboat/open.sh"
 max-items 1000 # limit articles to 100
 error-log "~/.config/newsboat/error.log"
@@ -9,7 +13,7 @@ reload-threads 4
 download-retries 4
 download-timeout 10
 prepopulate-query-feeds yes
-# Colors --------------
+# -- Colors -----------
 color background color7 default
 color info color7 color0 dim
 color listnormal color7 default dim
@@ -19,3 +23,12 @@ color listfocus_unread color1 default
 # -- Tor --------------
 download-retries 10
 download-timeout 60
+
+# -- OPEN.SH ----------
+# !!EXAMPLE NO IMPLEMENTED!!
+#
+# TOR=TRUE
+# PORT=638
+# IP=192.10.24
+# LOG=TRUE
+#
